phase2_Dev/src/objects/FormComponentProperty__c.object
<CustomObject>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentName__c</fullName>
        <formula>FormComponent__r.Component__r.Name</formula>
        <label>Component Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentProperty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Component Property</label>
        <referenceTo>ComponentProperty__c</referenceTo>
        <relationshipLabel>Form Components Properties</relationshipLabel>
        <relationshipName>ComponentProperties</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditions__c</fullName>
        <label>Conditions</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FormComponentUUID__c</fullName>
        <formula>FormComponent__r.UUID__c</formula>
        <label>Form Component UUID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormComponent__c</fullName>
        <label>Form Component</label>
        <referenceTo>FormComponent__c</referenceTo>
        <relationshipLabel>Form Component Properties</relationshipLabel>
        <relationshipName>Properties</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PropertyName__c</fullName>
        <formula>ComponentProperty__r.PropertyName__c</formula>
        <label>Property Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>UUID</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Form Component Property</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ComponentName__c</columns>
        <columns>Conditions__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Extended</fullName>
        <columns>NAME</columns>
        <columns>ComponentName__c</columns>
        <columns>ComponentProperty__c</columns>
        <columns>Conditions__c</columns>
        <columns>FormComponent__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Extended</label>
    </listViews>
    <nameField>
        <displayFormat>FCP-{0}</displayFormat>
        <label>Form Component Property Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Component Property</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>